--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
   --ff-accent: "Red Hat Display", sans-serif;
 }
 
+/* CSS Reset */
+
 /*1. Use a more-intuitive box-sizing model. */
 *::before,
 *::after {
